--- a/triptailor/templates/triptailor/searchbar-template.html
+++ b/triptailor/templates/triptailor/searchbar-template.html
@@ -23,7 +23,8 @@
                         <label for="end_range" class="" id="end_date_label">End</label>
                     </div>
                     <div class="input-field col s2 m1 l1">
-                        <button class="btn waves-effect waves-light" type="submit" name="action">Submit</button>
+                        <button class="btn waves-effect waves-light hide-on-small-only" type="submit" name="action">Submit</button>
+                        <button class="btn-floating waves-effect waves-light show-on-small hide-on-med-and-up" type="submit" name="action"><i class="material-icons">send</i></button>
                     </div>
                 </form>
             </div>
