--- a/triptailor/templates/triptailor/aboutUs.html
+++ b/triptailor/templates/triptailor/aboutUs.html
@@ -11,10 +11,9 @@
    }
    #about{
        text-align: center;
-       color: white;
+       color:rgba(255,255,255,1);
        margin-top: 125px;
-       background-color: black;
-       opacity: .65;
+       background-color: rgba(0,0,0,.65);
    }
 </style>
 {% endblock header %} 
