added link to create trip in profile. all cards are active.

--- a/triptailor/templates/registration/profile.html
+++ b/triptailor/templates/registration/profile.html
@@ -82,7 +82,7 @@
                 <div class="col s12 m7">
                     <div class="card">
                         <div class="card-action">
-                            <a href="#">Create trips</a>
+                            <a href="{% url 'create_trip' %}">Create trips</a>
                         </div>
                     </div>
                 </div>
