:ambulance: styling fixes

--- a/triptailor/templates/registration/profile.html
+++ b/triptailor/templates/registration/profile.html
@@ -11,7 +11,7 @@
     }
 </style>
 <div class="row">
-    <div class="row col s12 s8 offset-s1">
+    <div class="row col s12">
 
         <div class="col s12 m4 l3">
             <div class="card" style="margin-top: 10%;">
