:ambulance: fixes: / by 0 ratings, guideProfiles linked, mobile login

--- a/triptailor/templates/registration/login.html
+++ b/triptailor/templates/registration/login.html
@@ -18,8 +18,7 @@
 	.container {
 		margin-top: 1%;
 		margin-bottom: 1%;
-		width: 40%;
-		height: 95%;
+		/*width: 40%; */
 	}
 
 	.tabs .indicator {
